# Resume

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  deploy.nix  deploy.sh  error.html  flake.nix  generate-pdf.nix  generate_pdf.sh  index.html  main.js  result  resume.yaml  resume_data.yaml  shell.nix  styles.css  test.sh  wasm.nix
.github/scripts/: build_and_test.sh
.github/workflows/: main.yml
proto-codegen/: Cargo.toml  README.md
protos/: resume.proto
scripts/: deploy.sh  generate_pdf.sh  parse_logs.py  sync_s3.sh
src/: date_range.rs  education.rs  experience.rs  lib.rs  location.rs  phone_number.rs  protos.rs  resume.rs  resume_ui.rs  skills.rs  tag_agent.rs  types.rs
src/protos/: resume.rs
wasm-app/: Cargo.toml  index.html  main.js
wasm-app/src/: education.rs  experience.rs  lib.rs  location.rs  phone_number.rs  resume.pb  resume.rs
wasm-app/src/protos/: resume.rs
yaml-parser/: build_resume.py  resume_pb2.py
