[package]
name = "wasm-app"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_yaml = "0.8.23"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
yew = "0.17"
yewtil = "0.3"
wasm-bindgen = "0.2"
