[package]
name = "wasm-app"
version = "0.1.0"
authors = ["Troy Neubauer <troyneubauer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
yew = "0.17"
yewtil = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
